fix: headings alignment fixed

--- a/scrybe_frontend/src/components/terms and condition/content.module.scss
+++ b/scrybe_frontend/src/components/terms and condition/content.module.scss
@@ -11,6 +11,15 @@
         font-size: 24px;
         line-height: 56px;
         color: #1F1F1F;
+        margin: 1rem auto;
+    }
+    .txt{
+        font-family: 'Kanit';
+        font-style: normal;
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 56px;
+        color: #1F1F1F;
     }
     .paragraphs{
         font-family: 'Kanit';
@@ -28,6 +37,7 @@
         line-height: 26px;
         color: #1F1F1F;
         list-style-type: decimal;
+        margin-left: 2rem;
     }
 }
 @media screen and (max-width:650px){
